--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h3 {
   margin-bottom: 1rem;
 }
 p {
-  top-margin: 0;
+  margin-top: 0;
 }
 .container {
   display: flex;
@@ -48,4 +48,28 @@ p {
   h3 {
     font-size: 2.4rem;
   }
+}
+/* links */
+
+/* TODO: barye dokme ha rang tarif konim va root ra tarif konim */
+.link-arrow {
+  color: var();
+  font-size: 2rem;
+}
+.link-arrow::after {
+  content: "V";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
+  }
+}
+a {
+  text-decoration: none;
 }
