--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,49 @@ a {
     font-size: 1.2rem;
   }
 }
+/* lists  */
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var();
+  font-size: 1.4rem;
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+/* TODO: set image tick for list */
+.list--tick {
+  list-style-image: url(../images/);
+  padding-left: 3rem;
+}
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+@media screen and(min-width: 1024px) {
+  .list--tick .list__item {
+    padding-left: 0;
+  }
+}
+
+/* icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+/* TODO: set color primary for this icon class*/
+.icon--primary {
+  fill: var();
+}
+.icon-container {
+  background: gold;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
