create callout and styles

--- a/components/card.html
+++ b/components/card.html
@@ -3,7 +3,7 @@
     <div class="card card--secondary">
       <header class="card__header">
           <!-- TODO: add a popular_badge to image folder -->
-        <!-- <img src="images/popular_badge.svg" alt="" /> -->
+        <!-- <img class="badge" src="images/popular_badge.svg" alt="" /> -->
         <h3 class="plane__name">entry</h3>
         <span class="plane__price">$14</span>
         <span class="plane__billing-cycle">/month</span>
