--- a/css/style.css
+++ b/css/style.css
@@ -136,9 +136,16 @@ a {
   width: 40px;
   height: 40px;
 }
+.icon--small {
+  width: 30px;
+  height: 30px;
+}
 /* TODO: set color primary for this icon class*/
 .icon--primary {
   fill: var();
+}
+.icon--white {
+  fill: #fff;
 }
 .icon-container {
   background: gold;
@@ -149,6 +156,9 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+.icon-container--accent {
+  background: var(--color-sccent);
 }
 /* button */
 .btn {
@@ -205,6 +215,10 @@ a {
 .btn--outline:hover {
   background: var();
   color: #fff;
+}
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 /* inputs */
 .input {
@@ -313,5 +327,77 @@ a {
   }
   .quote__organization {
     font-size: 1.6rem;
+  }
+}
+/* Grids */
+.grid {
+  display: grid;
+}
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* Testimonials */
+.testimonial {
+  padding: 3rem;
+}
+.testimonial__image {
+  position: relative;
+}
+.testimonial__image > img {
+  width: 100%;
+}
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+}
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+  .testimonial .quote {
+    margin-left: 6rem;
+  }
+}
+/* Callouts */
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+.callout--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+.callout .btn {
+  justify-content: center;
+  align-self: center;
+}
+
+.callout__content {
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+  .callout__content {
+    text-align: left;
+  }
+  .callout .btn {
+    justify-self: start;
+    margin-left: 0 2rem;
   }
 }
