--- a/css/style.css
+++ b/css/style.css
@@ -401,3 +401,29 @@ a {
     margin-left: 0 2rem;
   }
 }
+/* collapsible */
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: all 0.3s;
+}
+.collapsible__content {
+  max-width: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: max-height 0.3s;
+}
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity: 1;
+}
